--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,7 +1,7 @@
-name: Ben Doherty
-studentNumber: z1234567/Monday/Tuesday
-gitHubUsername: notionparallax
+name: Jiyuan Liu
+studentNumber: z5211296
+gitHubUsername: easeee
 stackoverflow: http://stackoverflow.com/users/1835727/ben
-unswEmail: noIdea@unsw.edu.au/name@company.com.au
-realEmailFirstBit: ben  # this avoids spam
-realEmailOtherBit: @notionparallax.co.uk
+unswEmail: z5211296@ad.unsw.edu.au
+realEmailFirstBit: z5211296 # this avoids spam
+realEmailOtherBit: @ad.unsw.edu.au
